--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Card {
+    @apply h-64 w-48 shadow-md rounded-lg flex-none
+}
+
+.Card:nth-child(odd){
+    @apply bg-green-travel text-white
+}
+
+.Card:nth-child(even){
+    @apply bg-white text-blue-travel
+}
+
+.CardFull {
+    @apply h-height-card-full w-width-card-full bg-red-50 rounded-xl p-7
+}
