--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .Card {
-    @apply h-64 w-48 shadow-md rounded-lg flex-none
+    @apply h-64 w-48 shadow-md rounded-lg flex-none bg-black min-laptop:w-64 min-laptop:h-72
 }
 
 .Card:nth-child(odd){
@@ -15,5 +15,10 @@
 }
 
 .CardFull {
-    @apply h-height-card-full w-width-card-full bg-red-50 rounded-xl p-7
+    @apply h-height-card-full w-full bg-red-50 rounded-xl p-7
 }
+
+.ImgCard{
+    @apply rounded-t-lg h-4/6 w-full
+}
+
