--- a/src/input.css
+++ b/src/input.css
@@ -15,10 +15,17 @@
 }
 
 .CardFull {
-    @apply h-height-card-full w-full bg-red-50 rounded-xl p-7
+    @apply h-height-card-full w-full bg-red-50 rounded-xl p-7 bg-cover bg-center shadow-md
 }
 
 .ImgCard{
     @apply rounded-t-lg h-4/6 w-full
 }
 
+.Titulo_pago{
+    @apply text-red-travel text-base font-Montserrat font-semibold min-laptop:text-2xl
+}
+
+.Parrafo_pago{
+    @apply font-Montserrat text-xs font-medium min-laptop:text-sm
+}
